--- a/src/sass/components/_banner-stick.scss
+++ b/src/sass/components/_banner-stick.scss
@@ -3,7 +3,6 @@
   justify-content: flex-end;
   position: relative;
   color: $heading-color;
-  overflow-x: hidden;
   &__content {
     position: absolute;
     top: 50%;
