--- a/src/sass/components/_home-blog.scss
+++ b/src/sass/components/_home-blog.scss
@@ -1,13 +1,13 @@
 .home-blog-item {
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
   border-radius: 5px;
   padding: 5px;
   box-shadow: 0px 8px 30px rgba(49, 32, 138, 0.05);
   margin-bottom: 30px;
   border-radius: 5px;
+  height: 100%;
   &__img {
     width: 100%;
     height: 255px;
@@ -45,11 +45,15 @@
   }
   &__content {
     padding: 0 15px 35px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
   }
   &__heading {
     font-weight: bold;
-    margin-bottom: 17px;
+    line-height: 1.5;
     transition: all 0.2s linear;
+    flex: 1;
   }
   &__desc {
     margin-bottom: 14px;
@@ -66,3 +70,9 @@
     color: $primary-color;
   }
 }
+
+// .home-blog {
+//   &-list {
+//     height: 100%;
+//   }
+// }
