--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -13,7 +13,6 @@
   padding-right: calc(1 * var(--gutter));
   margin-left: auto;
   margin-right: auto;
-  overflow-x: hidden;
 }
 .section {
   &__heading {
